Test and fix user move and combination transactions