@@ -29,7 +29,7 @@ import com.djrapitops.plan.storage.database.DBSystem;
 import com.djrapitops.plan.storage.database.Database;
 import com.djrapitops.plan.storage.database.transactions.events.PlayerRegisterTransaction;
 import com.djrapitops.plan.storage.database.transactions.events.StoreSessionTransaction;
-import com.djrapitops.plan.storage.database.transactions.events.WorldNameStoreTransaction;
+import com.djrapitops.plan.storage.database.transactions.events.StoreWorldNameTransaction;
 import extension.SeleniumExtension;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -130,7 +130,7 @@ class ExportJSErrorRegressionTest {
         UUID uuid = TestConstants.PLAYER_ONE_UUID;
         database.executeTransaction(new PlayerRegisterTransaction(uuid, RandomData::randomTime, TestConstants.PLAYER_ONE_NAME));
         FinishedSession session = new FinishedSession(uuid, serverUUID, 1000L, 11000L, 500L, new DataMap());
-        database.executeTransaction(new WorldNameStoreTransaction(serverUUID, "world"));
+        database.executeTransaction(new StoreWorldNameTransaction(serverUUID, "world"));
         database.executeTransaction(new StoreSessionTransaction(session));
     }
 
@@ -187,7 +187,7 @@ class ExportJSErrorRegressionTest {
         List<String> loggedLines = logs.stream()
                 .map(log -> "\n" + log.getLevel().getName() + " " + log.getMessage())
                 .filter(line -> !line.contains("favicon.ico"))
-                .collect(Collectors.toList());
+                .toList();
         assertTrue(loggedLines.isEmpty(), () -> "Browser console included " + loggedLines.size() + " logs: " + loggedLines);
     }
 }
